--- a/frontend/login page/index.html
+++ b/frontend/login page/index.html
@@ -39,7 +39,7 @@
 
 <body>
     <div id="title">
-        <div class="title" style="padding: 3em 10%;">
+        <div class="title">
             <h1>
                 Memento Mori
             </h1>
@@ -104,6 +104,7 @@ Login
             </div>
         </div>
         <div id="dropDownSelect1"></div>
+
 
         <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 
