--- a/src/main/resources/webapp/frontend/sign_up_page/signup.html
+++ b/src/main/resources/webapp/frontend/sign_up_page/signup.html
@@ -114,7 +114,7 @@ Login
                         <span class="login100-form-title"></span>
                         <div class = "flex-row">
                             <div class = "m-r-12">
-                                <div class="wrap-input100 validate-input m-b-12" data-validate="Day is required">
+                                <div class="wrap-input100 m-b-12">
                                     <select class="select100" style="width: auto;">
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -152,7 +152,7 @@ Login
                                 </div>
                             </div>
                             <div class = "m-r-12">
-                                <div class="wrap-input100 validate-input m-b-12" data-validate="Month is required">
+                                <div class="wrap-input100 m-b-12">
                                     <select class="select100" style="width: auto;">
                                         <option value="1">January</option>
                                         <option value="2">February</option>
