removed duplicates, register page html now in the login page folder

--- a/src/main/resources/webapp/frontend/login page/index.html
+++ b/src/main/resources/webapp/frontend/login page/index.html
@@ -94,7 +94,7 @@ Forgot Password?
                             <button class="login100-form-btn">
 Login
 </button>
-                            <a class="new-acc" href="#">Create new account</a>
+                            <a class="new-acc" href="signup.html">Create new account</a>
 
                         </div>
 
