--- a/src/main/resources/webapp/frontend/login page/signup.html
+++ b/src/main/resources/webapp/frontend/login page/signup.html
@@ -32,7 +32,7 @@ Login
     <link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
 
     <link rel="stylesheet" type="text/css" href="css/util.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/sign_up.css">
     <link href="http://fonts.cdnfonts.com/css/blackadder-itc" rel="stylesheet">
     <link href="//db.onlinewebfonts.com/c/e60c6bde9f7530d160a42ce17c0067fb?family=Goudy+Old+Style" rel="stylesheet" type="text/css" />
 
@@ -217,7 +217,7 @@ Login
                             <span class="login100-form-title p-b-10"></span>
                             <span class="txt1 p-b-11">
                             Already have an account?
-                                <a href="#" class="txtblue">
+                                <a href="index.html" class="txtblue">
                             Log in
                                 </a>
                             </span>
